			   XPCE ChangeLog
			   ==============

VERSION 6.1.12, distributed with SWI-Prolog 5.1.12
==================================================

* ADDED: library(splash_screen) to provide nice startup screens.

* ADDED/FIXED: Allow a frame to delete its only window (frame->delete).
  Added code to library(tabbed) window to disconnect a window from its
  frame before adding to the tab.  Steve Moyle.

* FIXED: Poor hash-performance hashing a sequence of integers.  Anjo
  Anjewierden

* FIXED: Various minor problems in barchart/plotter.

* FIXED: Generating PostScript from bitmaps filled with ->draw_in
  (X11 version).

* FIXED: Generating PostScript from boxes with negative dimension.

* FIXED: bar->compute can fail.

* FIXED: Prolog navigator loading wrong Prolog module.  Fabien Todescato.


VERSION 6.1.11, distributed with SWI-Prolog 5.1.11
==================================================

* ADDED: Redirect events to the label of a tab to ->label_event to allow
  adding user-defined event-handling to tab-labels.

* FIXED: Proper handling of `tab->destroy': update layout of the tab labels
  and ensure one of the tabs is `on-top'.

* ADDED: library(tabbed_window) for putting windows in tabs.

* FIXED: handle keyboard focus to windows displayed on windows.

* FIXED: Term-description of class view.

* FIXED: Cursor up/down in list-browser.  Anjo Anjewierden.

* FIXED: default-button and modified-item handling in nested dialog-groups.
  Juergen Repp.

* FIXED: Make `window->background' work with images on Windows.  Used to be
  supported on the X11 version only.


VERSION 6.1.10, distributed with SWI-Prolog 5.1.10
==================================================

* ENHANCED: many small changes to PceEmacs, cross-referencer and other parts
  of the XPCE libraries dealing with Prolog itself.

* MODIFIED: moved library(emacs/prolog_xref) to library(pce_prolog_xref) for
  better library structure.
