@@ -1,6 +1,8 @@
 			   XPCE ChangeLog
 			   ==============
 
+* PORT: Fixed many GCC 3.3 signed/unsigned warnings.
+
 VERSION 6.1.12, distributed with SWI-Prolog 5.1.12
 ==================================================
 
